Fixing file relative paths

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 				</section>
 				<section>
 					<h1>Time to JS.</h1>
-					<img src="/img/BallerBen.jpg" style="height: 550px;">
+					<img src="img/BallerBen.jpg" style="height: 550px;">
 				</section>
-				<section><h1>Learnings</h1><img src="/img/Beach.JPG" alt="beach" style="height: 500px"></section>
+				<section><h1>Learnings</h1><img src="/img/Beach.jpg" alt="beach" style="height: 500px"></section>
 				<section>
 					<h2>Reactive Frameworks are Rad</h2>
 					<ul>
@@ -194,16 +194,16 @@
 					</ul>
 				</section>
 				<section>
-					<img src="/img/HardwareHaxor.JPG" alt="" style="height:600px;transform:rotate(0.25turn);">
+					<img src="img/HardwareHaxor.jpg" alt="" style="height:600px;transform:rotate(0.25turn);">
 				</section>
 				<section>
-					<img src="/img/BoatInnards.JPG" alt="" style="height:600px;transform: rotate(0.25turn);">
+					<img src="img/BoatInnards.jpg" alt="" style="height:600px;transform: rotate(0.25turn);">
 				</section>
 				<section>
-					<img src="/img/DaBoat.JPG" alt="" style="height:600px;transform: rotate(0.25turn);">
+					<img src="img/DaBoat.jpg" alt="" style="height:600px;transform: rotate(0.25turn);">
 				</section>								
 				<section>
-					<img src="/img/BoatStaged.JPG" alt="" style="height:600px;transform: rotate(0.25turn);">				
+					<img src="img/BoatStaged.jpg" alt="" style="height:600px;transform: rotate(0.25turn);">				
 				</section>
 				<section>
 					<video id="gfyVid1" class="gfyVid" height="700" autoplay="true" loop="true" muted="muted" poster="//thumbs.gfycat.com/AbsolutePaleAsianconstablebutterfly-poster.jpg" style="display: block; transform: rotate(0.5turn);">
