--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<h1>Time to JS.</h1>
 					<img src="img/BallerBen.jpg" style="height: 550px;">
 				</section>
-				<section><h1>Learnings</h1><img src="/img/Beach.jpg" alt="beach" style="height: 500px"></section>
+				<section><h1>Learnings</h1><img src="img/Beach.jpg" alt="beach" style="height: 500px"></section>
 				<section>
 					<h2>Reactive Frameworks are Rad</h2>
 					<ul>
